# advent-of-code

./: .gitattributes  .gitignore  .pre-commit-config.yaml  day1.py  day2.py  requirements.txt
06/: day6.py
07/: day7.py
08/: day8.py
11/: day11.py
12/: day12.py
15/: day15.py
16/: day16.py
18/: day18.py
19/: day19.py  part2.py
20/: day20.py
2020/: pyproject.toml
2020/01/: 2020-01.py
2020/02/: 2020-02.py
2020/03/: 2020-03.py
2020/04/: 2020-04.py
2020/05/: 2020-05.py
2020/06/: 2020-06.py
2020/07/: 2020-07.py
2020/08/: 2020-08.py
2020/09/: 2020-09.py
2020/10/: 2020-10.py
2020/11/: 2020-11.py
2020/12/: 2020-12.py
2020/13/: 2020-13.py
2020/14/: 2020-14.py
2020/15/: 2020-15.py
2020/16/: 2020-16.py
2020/17/: 2020-17.py
2020/18/: 2020-18.py
2020/19/: 2020-19.py
2020/20/: 2020-20.py
2020/21/: 2020-21.py
2020/scripts/: next.py
2020/template/: template.py
2021/: README.md  pyproject.toml
2021/03/: day3.py
2021/04/: day4.py
2021/05/: day5.py
2021/08/: day8.py
2021/09/: day9.py
2021/10/: day10.py
2021/13/: day13.py
2021/14/: day14.py
2021/17/: day17.py
2021/20/: day20.py
2021/21/: day21.py
2021/23/: day23.py
2021/template/: dayN.py
2022/: README.md  pyproject.toml  requirements.txt
2022/01/: 2022-01.py
2022/02/: 2022-02.py
2022/03/: 2022-03.py
2022/04/: 2022-04.py
2022/05/: 2022-05.py
2022/06/: 2022-06.py
2022/07/: 2022-07.py
2022/08/: 2022-08.py
2022/09/: 2022-09.py
2022/10/: 2022-10.py
2022/11/: 2022-11.py
2022/12/: 2022-12.py
2022/13/: 2022-13.py
2022/14/: 2022-14.py
2022/15/: 2022-15.py
2022/16/: 2022-16.py
2022/17/: 2022-17.py  2022-17a.py
2022/18/: 2022-18.py
2022/19/: 2022-19.py
2022/20/: 2022-20.py  2022-20a.py
2022/21/: 2022-21.py
2022/22/: 2022-22.py  2022-22a.py
2022/23/: 2022-23.py  2022-23a.py
2022/24/: 2022-24.py  2022-24a.py
2022/25/: 2022-25.py
2022/scripts/: next.py
2022/template/: template.py
2023/: README.md  pyproject.toml  requirements.txt
2023/01/: 2023-01.py
2023/02/: 2023-02.py  2023-02a.py
2023/03/: 2023-03a.py  2023-03b.py
2023/04/: 2023-04.py  2023-04a.py
2023/05/: 2023-05.py  2023-05a.py
2023/06/: 2023-06a.py  2023-06b.py
2023/07/: 2023-07.py  2023-07a.py
2023/08/: 2023-08.py  2023-08a.py
2023/09/: 2023-09.py  2023-09a.py
2023/10/: 2023-10.py  2023-10a.py
2023/11/: 2023-11.py  2023-11a.py
2023/12/: 2023-12.py
2023/13/: 2023-13.py  2023-13a.py
2023/14/: 2023-14.py  2023-14a.py
2023/15/: 2023-15.py  2023-15a.py
2023/16/: 2023-16.py  2023-16a.py
2023/17/: 2023-17.py  2023-17a.py
2023/18/: 2023-18.py  2023-18a.py
2023/19/: 2023-19.py  2023-19a.py
2023/20/: 2023-20.py  2023-20a.py
2023/21/: 2023-21.py  2023-21a.py
2023/22/: 2023-22.py  2023-22a.py
2023/24/: 2023-24.py  2023-24a.py
2023/25/: 2023-25.py
2023/scripts/: next.py
2023/template/: template.py
2025/: pyproject.toml  requirements.txt
2025/01/: 2025-01.py
2025/02/: 2025-02.py
2025/03/: 2025-03.py
2025/04/: 2025-04a.py  2025-04b.py
2025/05/: 2025-05a.py  2025-05b.py
21/: day21.py
22/: day22.py
23/: day23.py
24/: day24.py  input2.txt
25/: day25.py
aoc/: pyproject.toml
aoc/aoc/: __init__.py
template/: dayN.py
