[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aoc"
authors = [{ name = "Kyle Benesch", email = "4b796c65+github@gmail.com" }]
dynamic = ["version", "description"]
classifiers = ["License :: OSI Approved :: The Unlicense (Unlicense)"]
requires-python = ">=3.13"
dependencies = ["numpy"]

[project.urls]
Home = "https://github.com/HexDecimal/advent-of-code"

[tool.ruff]
line-length = 120

[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
select = [
    "ALL", # flake8-logging-format
]
ignore = [
    "EM", # flake8-errmsg
    "COM", # flake8-commas
    "D", # pydocstyle
    "E501", # line-too-long
    "F405", # undefined-local-with-import-star-usage
    "S101", # assert
    "TC001", # typing-only-first-party-import
    "TC002", # typing-only-third-party-import
    "TC003", # typing-only-standard-library-import
    "TRY", # tryceratops
]
